# Digital_Team_MVD

./: README.md
DATA/: a1.py  a2.py  conect.py  conect2.py  copy1.txt  past.py  past_a2.py  slova2.txt  test1.txt  Модель.json
GuiTextController/: CMakeLists.txt  ejdbcontroller.cpp  handlerengine.cpp  handlerengine.h  highlighter.cpp  highlighter.h  machinelearnitem.cpp  machinelearnitem.h  machinelearnitem.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
GuiTextController/forms/: totallyeditordialog.cpp  totallyeditordialog.h  totallyeditordialog.ui  totallyeditoritem.cpp  totallyeditoritem.h  totallyeditoritem.ui
OCR/: Tessecrat_OCR.sh
TextHandlerInterface/: CMakeLists.txt  ejdbcontroller.cpp  ejdbcontroller.h  handlerengine.cpp  handlerengine.h  main.cpp
